# Sandbox_HTML

./: CMakeLists.txt  README.md  basics.html  main.c  piscineweb.html  tab.html
backend/: CMakeLists.txt  README.md  main.c  webc.cgi
backend/inc/: weather_info.h  webpage.h
backend/src/: weather_info.c  webpage.c
frontend/: cweb  main.c  piscineweb.html
frontend/inc/: htmc.h
frontend/src/: htm.c
inc/: website.h
src/: website.c
